--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -99,8 +99,11 @@
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
     <ClCompile Include="..\..\..\..\src\math\crypto.cpp" />
     <ClCompile Include="..\..\..\..\src\math\ec_keys.cpp" />
+    <ClCompile Include="..\..\..\..\src\math\external\aes256.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\crypto_scrypt.c" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha256.c" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha512.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\pbkdf2_sha256.c" />
     <ClCompile Include="..\..\..\..\src\math\external\pkcs5_pbkdf2.c" />
     <ClCompile Include="..\..\..\..\src\math\external\ripemd160.c" />
     <ClCompile Include="..\..\..\..\src\math\external\sha1.c" />
@@ -123,6 +126,7 @@
     <ClCompile Include="..\..\..\..\src\message\inventory_vector.cpp" />
     <ClCompile Include="..\..\..\..\src\message\network_address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\nonce.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\not_found.cpp" />
     <ClCompile Include="..\..\..\..\src\message\verack.cpp" />
     <ClCompile Include="..\..\..\..\src\network\acceptor.cpp" />
     <ClCompile Include="..\..\..\..\src\network\channel.cpp" />
@@ -149,13 +153,12 @@
     <ClCompile Include="..\..\..\..\src\utility\binary.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\istream_reader.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\random.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\string.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\logger.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\ostream_writer.cpp" />
-    <ClCompile Include="..\..\..\..\src\utility\string.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\thread.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\threadpool.cpp" />
     <ClCompile Include="..\..\..\..\src\utility\variable_uint_size.cpp" />
+    <ClCompile Include="..\..\..\..\src\wallet\bip38.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\dictionary.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\hd_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\wallet\key_formats.cpp" />
@@ -215,6 +218,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\inventory_vector.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\network_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\nonce.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\not_found.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\verack.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\acceptor.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\channel.hpp" />
@@ -232,11 +236,6 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\settings.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\shared_const_buffer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\network\timeout.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\binary_trie.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_iterator.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_reverse_iterator.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_structure_node.hpp" />
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\trie\trie_value_node.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\console_streambuf.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ifstream.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\unicode\ofstream.hpp" />
@@ -272,6 +271,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\variable_uint_size.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\writer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\version.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\bip38.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\dictionary.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\hd_keys.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\key_formats.hpp" />
@@ -284,8 +284,11 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri.hpp" />
     <ClInclude Include="..\..\..\..\src\conditional_stack.hpp" />
     <ClInclude Include="..\..\..\..\src\evaluation_context.hpp" />
+    <ClInclude Include="..\..\..\..\src\math\external\aes256.h" />
+    <ClInclude Include="..\..\..\..\src\math\external\crypto_scrypt.h" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha256.h" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha512.h" />
+    <ClInclude Include="..\..\..\..\src\math\external\pbkdf2_sha256.h" />
     <ClInclude Include="..\..\..\..\src\math\external\pkcs5_pbkdf2.h" />
     <ClInclude Include="..\..\..\..\src\math\external\ripemd160.h" />
     <ClInclude Include="..\..\..\..\src\math\external\sha1.h" />
@@ -296,11 +299,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base16.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\binary_trie.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\trie_iterator.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\trie_reverse_iterator.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\trie_structure_node.ipp" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\trie\trie_value_node.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\array_slice.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\collection.ipp" />
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\data.ipp" />
