Split out delegates from dispatcher.

--- a/Makefile.am
+++ b/Makefile.am
@@ -403,6 +403,7 @@ include_bitcoin_bitcoin_utility_HEADERS = \
     include/bitcoin/bitcoin/utility/data.hpp \
     include/bitcoin/bitcoin/utility/deadline.hpp \
     include/bitcoin/bitcoin/utility/decorator.hpp \
+    include/bitcoin/bitcoin/utility/delegates.hpp \
     include/bitcoin/bitcoin/utility/deserializer.hpp \
     include/bitcoin/bitcoin/utility/dispatcher.hpp \
     include/bitcoin/bitcoin/utility/endian.hpp \
