Add new messages to VS project.

--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -116,6 +116,15 @@
     <ClCompile Include="..\..\..\..\src\math\secp256k1_initializer.cpp" />
     <ClCompile Include="..\..\..\..\src\math\uint256.cpp" />
     <ClCompile Include="..\..\..\..\src\message\address.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\alert.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\alert_formatted_payload.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\filter_add.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\filter_clear.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\filter_load.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\get_headers.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\memory_pool.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\merkle_block.cpp" />
+    <ClCompile Include="..\..\..\..\src\message\reject.cpp" />
     <ClCompile Include="..\..\..\..\src\message\version.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_address.cpp" />
     <ClCompile Include="..\..\..\..\src\message\get_blocks.cpp" />
@@ -211,6 +220,15 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\secp256k1_initializer.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\uint256.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\address.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\alert.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\alert_formatted_payload.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\filter_add.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\filter_clear.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\filter_load.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_headers.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\memory_pool.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\merkle_block.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\reject.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\version.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_address.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\message\get_blocks.hpp" />
